# claude-code-supervisor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  config.json  data_manager.py  pyproject.toml  requirements.txt  setup.py  supervisor.py  supervisor_config.json  test_data_manager.py  test_supervisor.py
.github/workflows/: publish.yml
claude_code_supervisor/: __init__.py  __version__.py  config.py  data_manager.py  prompts.py  supervisor.py  supervisor_config.json  utils.py
examples/: README.md  basic_usage.py  byom_example.py  csv_processing_example.py  data_science_prompt_example.py  dictionary_processing_example.py  feedback_usage.py  list_sorting_example.py  oop_prompt_example.py  performance_prompt_example.py  plan_mode_example.py  singleshot_usage.py
tests/: test_data_manager.py  test_simplified_session.py  test_supervisor.py
